kubernetes/mammal_with_istio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mammal-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mammal
  template:
    metadata:
      labels:
        app: mammal
      name: mammal
    spec:
      containers:
        -
          image: "clivern/mammal:v1.3.0"
          name: mammal-app
          ports:
          - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /_ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /_health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5


---
apiVersion: v1
kind: Service
metadata:
  name: mammal-svc
  labels:
    app: mammal
spec:
  ports:
    -
      port: 80
      targetPort: 8000
  selector:
    app: mammal
  type: LoadBalancer
